crates/panels/re_recording_panel/tests/snapshots/snapshot_tests__empty_context_test.snap
---
source: crates/panels/re_recording_panel/tests/snapshot_tests.rs
expression: data
---
servers: []
live_recordings: []
imported_recordings:
  - app_id: test_app
    is_active: false
    is_selected: false
    loaded_recordings:
      - entity_db:
          kind: Recording
          application_id: test_app
          recording_id: test_recording
local_tables: []
example_apps: []
loading_examples: []
show_example_section: true
loading_receivers: []
